manifests/base/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: sample-99995709
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-99995709
  template:
    metadata:
      labels:
        app: sample-99995709
    spec:
      containers:
        - name: sample-99995709
          image: cepgstapacr.azurecr.io/sample-99995709
          ports:
          - containerPort: 8080
