manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: sample-99995709
spec:
    ports:
    - port: 8080 
    selector:
        app: sample-99995709
